# Frame-Pit

./: README.md  pyproject.toml
django_app/django_app/: settings.py  urls.py
django_app/main/: views.py
django_app/main/management/commands/: fill_db.py
django_app/main/templates/main/: home.html
django_app/rooms/: api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
django_app/rooms/migrations/: 0001_initial.py  0005_message_poll_polloption_pollvote.py
django_app/rooms/templates/rooms/: room_create.html  room_delete.html  room_detail.html  room_update.html  rooms_list.html
django_app/static/css/: style.css
django_app/templates/: base.html
django_app/users/: api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
django_app/users/migrations/: 0002_profile_description_profile_image.py  0003_rename_image_profile_image_path.py
django_app/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  profile_delete.html  profile_detail.html  profile_update.html  register.html
